logs/tacot.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Mako-0.9.1.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.11.egg-info'...
Listing './lib/python3.5/site-packages/jsmin'...
Listing './lib/python3.5/site-packages/jsmin-2.0.9.egg-info'...
Listing './lib/python3.5/site-packages/mako'...
Listing './lib/python3.5/site-packages/mako/ext'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tacot'...
Compiling './lib/python3.5/site-packages/tacot/manifest.py'...
***   File "./lib/python3.5/site-packages/tacot/manifest.py", line 141
    except ManifestTemplateError, msg:
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tacot-0.3.5.egg-info'...
Listing './lib/python3.5/site-packages/webassets'...
Listing './lib/python3.5/site-packages/webassets/ext'...
Listing './lib/python3.5/site-packages/webassets/filter'...
Listing './lib/python3.5/site-packages/webassets/filter/cssrewrite'...
Listing './lib/python3.5/site-packages/webassets/filter/jspacker'...
Listing './lib/python3.5/site-packages/webassets/filter/rjsmin'...
Listing './lib/python3.5/site-packages/webassets-0.11.dev0.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
